@startuml

title __VIEWS's Class Diagram__\n

  namespace com.example.androidximalayafm {
    namespace views {
      class com.example.androidximalayafm.views.LoadingView {
          - mNeedRotate : boolean
          - rotateDegree : int
          + LoadingView()
          + LoadingView()
          + LoadingView()
          # onAttachedToWindow()
          # onDetachedFromWindow()
          # onDraw()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace views {
      class com.example.androidximalayafm.views.RoundRectImageView {
          - path : Path
          - roundRatio : float
          + RoundRectImageView()
          # onDraw()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace views {
      abstract class com.example.androidximalayafm.views.UILoader {
          - mEmptyView : View
          - mLoadingView : View
          - mNetWorkErrorView : View
          - mSuccessView : View
          + UILoader()
          + UILoader()
          + UILoader()
          + setOnRetryClickListener()
          + updateStatus()
          {abstract} # getSuccessView()
          - getEmptyView()
          - getLoadingView()
          - getNetworkErrorView()
          - init()
          - switchUIByCurrentStatus()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace views {
      interface com.example.androidximalayafm.views.UILoader.OnRetryClickListener {
          {abstract} + onRetryClick()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace views {
      enum UIStatue {
        EMPTY
        LOADING
        NETWORK_ERROR
        NONE
        SUCCESS
      }
    }
  }
  

  com.example.androidximalayafm.views.LoadingView -up-|> androidx.appcompat.widget.AppCompatImageView
  com.example.androidximalayafm.views.RoundRectImageView -up-|> androidx.appcompat.widget.AppCompatImageView
  com.example.androidximalayafm.views.UILoader -up-|> android.widget.FrameLayout
  com.example.androidximalayafm.views.UILoader o-- com.example.androidximalayafm.views.UILoader.UIStatue : mCurrentStatus
  com.example.androidximalayafm.views.UILoader o-- com.example.androidximalayafm.views.UILoader.OnRetryClickListener : mOnRetrClickListener
  com.example.androidximalayafm.views.UILoader +-down- com.example.androidximalayafm.views.UILoader.OnRetryClickListener
  com.example.androidximalayafm.views.UILoader +-down- com.example.androidximalayafm.views.UILoader.UIStatue


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
